--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:json-server": "json-server --watch src/api/data/posts.json --port 3000"
   },
   "devDependencies": {
+    "json-server": "^1.0.0-beta.2",
     "vite": "^5.4.1"
   }
 }
