--- a/tsconfig.json
+++ b/tsconfig.json
@@ -102,5 +102,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*.js"]
+  "include": [
+    "src/**/*.ts"
+  ] /* Specify an array of 'glob' patterns that match files to be included in the compilation. */
 }
